--- a/user_service/templates/charts.html
+++ b/user_service/templates/charts.html
@@ -95,10 +95,10 @@
               <div class="justify-content-center">
                 <div class="row">
                   <div class="col-md-6">
-                    <canvas id="barChart" style="margin-top: 120px"></canvas>
+                    <canvas id="barChart" ></canvas>
                   </div>
                   <div class="col-md-6">
-                    <canvas id="pieChart"></canvas>
+                    <canvas id="pieChart" class="center-canvas2"></canvas>
                   </div>
                 </div>
               </div>
