--- a/auth_service/templates/login.html
+++ b/auth_service/templates/login.html
@@ -50,8 +50,13 @@
               </li>
               {% if 'token' in request.cookies %}
               <li class="nav-item">
-                <a class="nav-link" href="http://localhost:5001/dashboard"
+                <a class="nav-link" href="http://localhost:5001/uploads"
                   >Upload</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="http://localhost:5001/charts"
+                  >Charts</a
                 >
               </li>
               <li class="nav-item">
