--- a/user_service/static/styles_for_dashboard.css
+++ b/user_service/static/styles_for_dashboard.css
@@ -2,7 +2,13 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    background-image: url('backgr2.jpg'); /* Path to your background image */
+    background-size: contain; /* Cover the entire background */
+    background-position: center; /* Center the background image */
+    background-attachment: fixed;
+    position: relative; /* Ensure the pseudo-element is positioned relative to the body */
 }
+
 .card-header {
     height: 60px; /* Adjust the height as needed */
     display: flex;
@@ -112,12 +118,17 @@ a:hover{
 .table th {
     padding-top: 12px;
     padding-bottom: 12px;
+    background-color: #ffffff;
 }
 .table tbody tr {
     margin-bottom: 20px;
+    background-color: #ffffff;
 }
 .table tbody tr:last-child {
     margin-bottom: 0;
+}
+.table tbody tr:nth-of-type(even) {
+    background-color: #f8f9fa; /* Light grey background for even rows */
 }
 
 .delete-url:hover{
@@ -184,7 +195,7 @@ color: #fa5b53;
   color: #4CAF50; /* Dark text color */
 }
 .highlight {
-    background-color: #000000;
+    background-color: #f8f9fa;
     color: #4CAF50;
     border-radius: 5px;
 }
@@ -214,11 +225,11 @@ color: #fa5b53;
     opacity: 0.7;
 }
 .flash-success {
-    background-color: #84df87;
+    background-color: #73bd77;
     color: white;
 }
 .flash-error {
-    background-color: #eb837c;
+    background-color: #fa5b53;
     color: white;
 }
 .flash-close {
@@ -226,4 +237,55 @@ color: #fa5b53;
     top: 5px;
     right: 10px;
     cursor: pointer;
+}
+
+.modals {
+    position: fixed;
+    z-index: 1;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+  }
+  .center-canvas {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .center-canvas2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* width: 100%;
+  height: 400px; */
+}
+@keyframes slideInFromLeft {
+	0% {
+		transform: translateX(-300px);
+		opacity: 0;
+	}
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+	}
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Apply the animation to the table */
+.table-container {
+    animation: slideInFromLeft 0.3s ease-out;
+}
+.card , .form-group,.theData,#barChart,#pieChart{
+    animation: fadeIn 0.3s ease-in;
 }
