--- a/user_service/templates/dashboard.html
+++ b/user_service/templates/dashboard.html
@@ -13,6 +13,7 @@
       href="{{ url_for('static', filename='styles_for_dashboard.css') }}"
     />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
   <body>
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
@@ -225,11 +226,9 @@
                     <td data-label="DOB">{{ detail[2] }}</td>
                     <td data-label="Age">{{ detail[3] }}</td>
                     <td>
-                      <a
-                        href="{{ url_for('delete_row', id=detail[4]) }}"
-                        class="delete-url"
-                        >Delete</a
-                      >
+                                            <a href="{{ url_for('delete_row', id=detail[4]) }}" class="delete-url">
+                        <i class="fas fa-trash"></i>
+                      </a>
                     </td>
                   </tr>
                   {% endif %} {% endfor %}
@@ -240,15 +239,75 @@
         </div>
       </div>
     </div>
+    {% if session['success_upload'] %}
+    <div class="modals fade show" id="uploadSuccessModal" tabindex="-1" role="dialog" aria-labelledby="uploadSuccessModalLabel" aria-hidden="false">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="uploadSuccessModalLabel">Upload Summary</h5>
+            <form method="post" action="{{ url_for('close_modal') }}">
+              <button type="submit" class="close" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </form>
+          </div>
+          <div class="modal-body">
+            <div class="container container-box">
+              <div class="row justify-content-center">
+                <div class="col">
+                  <div class="card" style="margin-top: -20px; border: none; ">
+                                <div class="card-body stats-card">
+                      <div class="row justify-content-center">
+                        <div class="col text-center">
+                          <h6 class="gender">Male</h6>
+                          <h2 id="maleCount2" class="theData">0</h2>
+                        </div>
+                        <div class="col text-center">
+                          <h6 class="gender">Female</h6>
+                          <h2 id="femaleCount2" class="theData">0</h2>
+                        </div>
+                        <div class="col text-center">
+                          <h6 class="gender">Invalid</h6>
+                          <h2 id="invalidCount2" class="theData">0</h2>
+                        </div>
+                      </div>
+                      
+                    </div>
+                  </div>
+                  <div class="card" style="margin-bottom: 20px; margin-top: -20px;">
+                    <div class="card-body">
+                      <div class="justify-content-center">
+                                                <div class="row">
+                          <canvas id="pieChart" class="center-canvas"></canvas>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+          
+        </div>
+      </div>
+    </div>
+    {% endif %}
     <!-- Embed JSON data -->
     <script id="details-data" type="application/json">
       {{ session['details'] | tojson | safe }}
+    </script>
+    <script id="details-data-temp" type="application/json">
+      {{ session['temp_details'] | tojson | safe }}
     </script>
 
     <script>
       // Parse JSON data
       const details = JSON.parse(
         document.getElementById("details-data").textContent
+      );
+      const detailsTemp = JSON.parse(
+        document.getElementById("details-data-temp").textContent
       );
       // Function to process data for pie chart
       function processPieChartData(details) {
@@ -504,6 +563,46 @@
             console.error("Error:", error);
           });
       }
+            
+        function processPieChartData2(details) {
+          const genderCounts = { male: 0, female: 0, invalidnic: 0 };
+      
+          details.forEach((detail) => {
+            const gender = detail[1].toLowerCase().replace(/\s+/g, '');
+            genderCounts[gender]++;
+          });
+      
+          // Update the text content of the elements
+          document.getElementById("maleCount2").textContent = genderCounts.male;
+          document.getElementById("femaleCount2").textContent = genderCounts.female;
+          document.getElementById("invalidCount2").textContent = genderCounts.invalidnic;
+      
+          return genderCounts;
+        }
+      
+
+      const pieChartData2 = processPieChartData2(detailsTemp);
+
+      const pieCtx = document.getElementById("pieChart").getContext("2d");
+      new Chart(pieCtx, {
+        type: "pie",
+        data: {
+          labels: ["Male", "Female", "Invalid"],
+          datasets: [
+            {
+              data: [pieChartData2.male, pieChartData2.female, pieChartData2.invalidnic],
+              backgroundColor: [
+                "rgba(116, 167, 252, 1)",
+                "rgba(250, 195, 85, 1)",
+                "rgba(255, 99, 132, 1)",
+              ],
+              borderColor: ["rgba(0, 0, 0, 1)", "rgba(0, 0, 0, 1)", "rgba(0, 0, 0, 1)"],
+              borderWidth: 1,
+            },
+          ],
+        },
+      });
+      
     </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
